# fastAPI-postgresql-heroku-portfolio

./: .gitignore  README.md  autenticação.py  connection.py  docker-compose.yml  index.html  init_db.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  services.py
static/css/: bootstrap.css  style.css
